--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.52.0",
     "bootstrap": "^5.3.7",
-    "ngx-editor": "^19.0.0-beta.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.0.1",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
