--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --base-href /AbraceRS-AngularSupabase/ && npx angular-cli-ghpages"
+    "deploy": "ng build --base-href /AbraceRS-AngularSupabase/ && npx angular-cli-ghpages --dir=dist/abracers-angular-supabase/browser"
   },
   "prettier": {
     "overrides": [
