--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "prebuild": "node set-env.js",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy": "ng build --base-href /AbraceRS-AngularSupabase/ && npx angular-cli-ghpages --dir=dist/abracers-angular-supabase/browser"
