--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.52.0",
+    "@vercel/speed-insights": "^1.2.0",
     "bootstrap": "^5.3.7",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
